<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AC1B2B"
    tools:context=".AssignSubjects">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20sp"
        android:gravity="center"
        android:text="@string/as"
        android:textColor="@android:color/white"
        android:textColorHighlight="#00FAF7F7"
        android:textSize="30sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"

        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.546">


        <Spinner
            android:id="@+id/spinner_course"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="20sp"

            android:layout_marginRight="20sp"
            android:layout_marginBottom="20sp"
            android:background="#FF9800"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="10sp"
            android:spinnerMode="dropdown"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/black"
            android:textColorLink="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <Spinner
            android:id="@+id/spinner_semester"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"

            android:layout_marginBottom="20sp"
            android:background="#FF9800"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="10sp"
            android:spinnerMode="dropdown"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/black"
            android:textColorLink="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_course" />

        <Spinner
            android:id="@+id/spinner_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"

            android:layout_marginBottom="20sp"
            android:background="#FF9800"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="10sp"
            android:spinnerMode="dropdown"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/black"
            android:textColorLink="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_semester" />

        <Spinner
            android:id="@+id/spinner_subject"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"

            android:background="#FF9800"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="10sp"
            android:spinnerMode="dropdown"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/black"
            android:textColorLink="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_name" />


        <EditText
            android:id="@+id/editTextbatch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginBottom="20sp"
            android:background="#FF9800"
            android:ems="10"
            android:hint="@string/ashint"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="10sp"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/remove_student"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_subject"
            app:layout_constraintVertical_bias="0.404" />

        <Button
            android:id="@+id/remove_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"

            android:layout_marginRight="20sp"
            android:layout_marginBottom="20sp"
            android:background="#FF9800"
            android:ems="10"
            android:onClick="assignSubjects"
            android:text="@string/asbutton"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_name"
            app:layout_constraintVertical_bias="0.653" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>